--- a/views/pages/view_posts.ejs
+++ b/views/pages/view_posts.ejs
@@ -41,6 +41,7 @@
     <title>Kament</title>
 </head>
 <body>
+    <% include ../partials/header.ejs %>
     <h1>Welcome to this awesome page</h1>
     <div id='posts'></div>
 </body>
