--- a/public/stylesheets/kament.css
+++ b/public/stylesheets/kament.css
@@ -20,6 +20,20 @@ h1, h2, h3 a {
     color: #3377dd;
 }
 
+/* View Comments page */
+p.title {
+    font-size: 24px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #3377dd;
+    text-shadow: 1px 1px black;
+}
+
+span.poster {
+    margin-left: 10px;
+    font-size: 18px;
+    color: #999;
+}
+
 a.comment {
     color: #444;
     font-size: 10pt;
@@ -110,6 +124,10 @@ div.post {
 
 div.even {
     background-color: #ccccff;
+}
+
+div.comment {
+    border: 5px solid black;
 }
 
 /* New post forms */
