'Hopefully fixed bug related to submitting posts'

--- a/views/pages/link_post.ejs
+++ b/views/pages/link_post.ejs
@@ -41,7 +41,7 @@
     <form class="newPost" action="/createPost" method="POST">
     <table>
         <tr><td>Title:</td><td>
-        <input type="text" name="title" size="40" />
+        <input type="text" name="title" size="40" maxlength="32" />
         </td></tr><tr><td>Link:</td><td>
         <input class="link" type="text" name="content" size="60" />
         </td></tr><tr><td></td><td>
