--- a/views/pages/text_post.ejs
+++ b/views/pages/text_post.ejs
@@ -41,7 +41,7 @@
     <form class="newPost" action="/createPost" method="POST">
     <table>
         <tr><td>Title:</td><td>
-        <input type="text" name="title" size="40" />
+        <input type="text" name="title" size="40" maxlength="32" />
         </td></tr><tr><td>Text:</td><td>
         <textarea name="content" cols="80" rows="20"></textarea>
         </td></tr><tr><td></td><td>
